# bibli-ls

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: flake-build.yml  python-publish.yml
bibli_ls/: __init__.py  bibli_config.py  cli.py  data_structures.py  database.py  parse.py  server.py  utils.py
bibli_ls/backends/: backend.py  bibtex_backend.py  zotero_backend.py
docs/: configurations.md  custom-cite-keys.md  default-config.toml
tests/: .bibli.toml  __init__.py  client.py  references.bib  references_other.bib  test_cli.py  utils.py
tests/lsp_tests/: test_completion.py  test_definition.py  test_diagnostics.py  test_hover.py  test_references.py
tests/test_data/: .bibli.toml  completion_test.md  definition_test.md  diagnostic_test.md  reference_test_1.md  reference_test_2.md  references_other.bib  references_other.fdb_latexmk  references_other.fls
