[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibli_ls"
version = "0.0.2.1"
authors = [{ name = "Kha Dinh", email = "dalo2903@gmail.com" }]
description = "A simple LSP server for your bibliographies"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["bibtexparser", "py_markdown_table", "pygls"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

# [tool.hatch.build.target.sdist.force-include]
# "src/cli.py" = "bibli_ls/cli.py"

[project.scripts]
bibli_ls = "bibli_ls.cli:cli"
