[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibli_ls"
version = "0.1.2"
authors = [{ name = "Kha Dinh", email = "dalo2903@gmail.com" }]
description = "A simple LSP server for your bibliographies"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "bibtexparser==2.0.0b4",
  "watchdog",
  "py_markdown_table",
  "pygls",
  "tosholi",
  "mdformat-gfm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kha-dinh/bibli-ls"
Issues = "https://github.com/kha-dinh/bibli-ls/issues"

[project.scripts]
bibli_ls = "bibli_ls.cli:cli"
