[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibli_ls"
version = "0.1.6.0"
authors = [{ name = "Kha Dinh", email = "dalo2903@gmail.com" }]
description = "A simple LSP server for your bibliographies"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "bibtexparser==2.0.0b4",
  "watchdog==6.0.0",
  "pyzotero==1.5.25",
  "py_markdown_table==1.2.0",
  "pygls==2.0.0a2",
  "tosholi==0.1.0",
  "mdformat==0.7.19",
  "ripgrepy==2.0.0",
  "typing_extensions==4.12.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pyhamcrest==2.1.0"]
doc = ["pydoc-markdown==4.8.2"]

[project.urls]
Homepage = "https://github.com/kha-dinh/bibli-ls"
Issues = "https://github.com/kha-dinh/bibli-ls/issues"

[project.scripts]
bibli_ls = "bibli_ls.cli:cli"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[[tool.pydoc-markdown.loaders]]
type = "python"
modules = ["bibli_config"]
search_path = ["./bibli_ls/"]

[[tool.pydoc-markdown.processors]]
type = "google"

[[tool.pydoc-markdown.processors]]
type = "filter"
documented_only = true


[tool.pydoc-markdown.renderer]
type = "markdown"
data_code_block = true
render_typehint_in_data_header = true
render_toc = true
